Report affiliate update, remove token on logout, fix empty buyer info

--- a/src/pages/transactions/report/report.html
+++ b/src/pages/transactions/report/report.html
@@ -28,7 +28,7 @@
 
         </ion-list>
     </section>
-    <span *ngIf="!reportForm.get('affiliate').value" class="no-affiliate-text" padding-left>{{ 'REPORT_PAGE.AFFILIATE_DESC' | translate }}</span>
+    <span *ngIf="!transaction.customer.affiliate" class="no-affiliate-text" padding-left>{{ 'REPORT_PAGE.AFFILIATE_DESC' | translate }}</span>
     <section margin-top class="white-bg">
       <ion-item-group>
         <ion-item>
