Update customer info layouts to hide it if it is empty

--- a/src/pages/transactions/transaction-details/transaction-details.html
+++ b/src/pages/transactions/transaction-details/transaction-details.html
@@ -88,7 +88,7 @@
       </ion-grid>
     </section>
 
-    <ion-list class="list">
+    <ion-list *ngIf="transaction.can_see_order_details == 'Y'" class="list">
       <ion-list-header>
         {{ 'TRANSACTION_DETAILS_PAGE.CUSTOMER_DETAILS' | translate }}
       </ion-list-header>
