--- a/src/pages/transactions/search/search.html
+++ b/src/pages/transactions/search/search.html
@@ -26,7 +26,7 @@
   <ion-grid padding>
     <ion-row>
       <ion-col>
-        <ion-segment mode="ios" [(ngModel)]="extended" class="toogle">
+        <ion-segment mode="ios" [(ngModel)]="extended" class="toogle" (ionChange)="toggleChanged($event)">
           <ion-segment-button value="N">
             {{ 'SEARCH_FILTERS_PAGE.ORDER_ID' | translate }}
           </ion-segment-button>
