added back btn to ChooseLanguagePage

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,5 +1,9 @@
 <ion-content padding>
 
+  <button no-padding text-capitalize ion-button clear color="light" (click)="back()" icon-left>
+    <ion-icon name="ios-arrow-back"></ion-icon>{{'BACK' | translate}}
+  </button>
+
   <section class="logo" text-center>
     <img class="logo-img" src="assets/img/logo-square.png">
   </section>
