--- a/src/pages/transactions/transaction-details/transaction-details.html
+++ b/src/pages/transactions/transaction-details/transaction-details.html
@@ -7,25 +7,30 @@
 
 </ion-header>
 
-
 <ion-content no-padding>
 
   <div *ngIf="transaction">
 
     <section class="white-bg">
-      <ion-grid padding *ngIf="transaction.products.length < 3;else many_products">
+
+      <ion-grid padding-horizontal padding-top *ngIf="transaction.products.length < 3;else many_products">
         <ion-row>
-          <ion-col col-7>
+          <ion-col col-7 no-padding>
             <div *ngFor="let obj of transaction.products; let i = index">
               <label class="label">{{ transaction.products.length > 1 && i == 0 ? 'Main' : ''}} {{ 'TRANSACTION_DETAILS_PAGE.PRODUCT_NAME' | translate }}</label>
               <p class="product_name">{{ obj.name }} / {{ obj.id }}</p>
             </div>
           </ion-col>
-          <ion-col col-5 text-right>
+          <ion-col col-5 text-right no-padding>
             <label class="label" >{{ 'TRANSACTION_DETAILS_PAGE.ORDER_ID' | translate }}</label>
             <p>{{ transaction.order_id }}</p>
             <label class="label">{{ 'TRANSACTION_DETAILS_PAGE.TRANSACTION_ID' | translate }}</label>
             <p>{{ transaction.transaction_id }}</p>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="date-transaction">
+            {{ transaction.date | date:'dd.MM.yy HH:mm' }}
           </ion-col>
         </ion-row>
       </ion-grid>
@@ -48,45 +53,75 @@
               <p class="product_name" [style.padding]="'5px 0'" *ngFor="let obj of transaction.products">{{ obj.name }} / {{ obj.id }}</p>
             </ion-col>
           </ion-row>
+          <ion-row>
+            <ion-col class="date-transaction">
+              {{ transaction.date | date:'dd.MM.yy HH:mm' }}
+            </ion-col>
+          </ion-row>
         </ion-grid>
       </ng-template>
 
-      <ion-grid class="bordered">
-        <ion-row class="border-bottom">
-          <ion-col col-6 class="border-right">
-            <label class="label">{{ 'TRANSACTION_DETAILS_PAGE.GROSS_AMOUNT' | translate }}</label>
-            <p>{{ +transaction.brutto | currency: transaction.currency: true }}</p>
-          </ion-col>
-          <ion-col col-6 >
-            <label class="label">{{ 'TRANSACTION_DETAILS_PAGE.NET_COMMISSION' | translate }}</label>
-            <p>{{ +transaction.netto | currency: transaction.currency: true}}</p>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col col-12>
-            <label class="label">{{"TRANSACTION_DETAILS_PAGE.EARNING" | translate}}</label>
-            <p>{{ +transaction.earned_amount | currency: transaction.earned_currency: true }}</p>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-
-      <ion-grid padding>
-        <ion-row align-items-center>
-          <ion-col col-4>
-            <label class="label">{{ 'TRANSACTION_DETAILS_PAGE.TRANSACTION_TYPE' | translate }}</label>
-            <p text-capitalize>{{ transaction.type }}</p>
-          </ion-col>
-          <ion-col col-4>
-            <label class="label">{{ 'TRANSACTION_DETAILS_PAGE.PAYMENT_METHOD' | translate }}</label>
-            <p text-capitalize>{{ transaction.method }}</p>
-          </ion-col>
-          <ion-col col-4>
-            <label class="label">{{ 'TRANSACTION_DETAILS_PAGE.CURRENCY' | translate }}</label>
-            <p>{{ transaction.currency }}</p>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
     </section>
+
+    <ion-list class="list">
+      <ion-list-header>
+        {{ 'GENERAL.EARNINGS' | translate }}
+      </ion-list-header>
+      <ion-item no-padding>
+        <ion-label padding-left>
+          {{ 'TRANSACTION_DETAILS_PAGE.GROSS_AMOUNT' | translate }}
+        </ion-label>
+        <div item-content class="total">
+          {{ +transaction.brutto | currency: transaction.currency: true }}
+        </div>
+      </ion-item>
+      <ion-item no-padding>
+        <ion-label padding-left>
+          {{ 'TRANSACTION_DETAILS_PAGE.NET_COMMISSION' | translate }}
+        </ion-label>
+        <div item-content class="total">
+          {{ +transaction.netto | currency: transaction.currency: true }}
+        </div>
+      </ion-item>
+      <ion-item no-padding>
+        <ion-label padding-left>
+          {{ 'TRANSACTION_DETAILS_PAGE.EARNING' | translate }}
+        </ion-label>
+        <div item-content class="total">
+          {{ +transaction.earned_amount | currency: transaction.earned_currency: true }}
+        </div>
+      </ion-item>
+    </ion-list>
+
+    <ion-list class="list">
+      <ion-list-header>
+        {{ 'SEARCH_FILTERS_PAGE.TRANSACTION_DETAILS' | translate }}
+      </ion-list-header>
+      <ion-item no-padding>
+        <ion-label padding-left>
+          {{ 'TRANSACTION_DETAILS_PAGE.TRANSACTION_TYPE' | translate }}
+        </ion-label>
+        <div item-content class="total">
+          {{ transaction.type }}
+        </div>
+      </ion-item>
+      <ion-item no-padding>
+        <ion-label padding-left>
+          {{ 'TRANSACTION_DETAILS_PAGE.PAYMENT_METHOD' | translate }}
+        </ion-label>
+        <div item-content class="total">
+          {{ transaction.method }}
+        </div>
+      </ion-item>
+      <ion-item no-padding>
+        <ion-label padding-left>
+          {{ 'SEARCH_FILTERS_PAGE.BILLING_TYPE' | translate }}
+        </ion-label>
+        <div item-content class="total">
+          {{ transaction.billing_type }}
+        </div>
+      </ion-item>
+    </ion-list>
 
     <ion-list class="list">
       <ion-list-header>
@@ -97,7 +132,7 @@
           <ion-label padding-left>
             {{ 'TRANSACTION_DETAILS_PAGE.NAME' | translate }}
           </ion-label>
-          <div item-content class="item-content" padding-right>
+          <div item-content class="item-content">
             {{ transaction.customer.name  || '-' }}
           </div>
         </ion-item>
@@ -105,7 +140,7 @@
           <ion-label padding-left>
             {{ 'TRANSACTION_DETAILS_PAGE.EMAIL' | translate }}
           </ion-label>
-          <div item-content class="item-content" padding-right>
+          <div item-content class="item-content">
             <div *ngIf="transaction.customer.email; else no_email">
               <a target="_blank" href="mailto:{{transaction.customer.email}}">{{ transaction.customer.email }}</a>
             </div>
@@ -128,17 +163,15 @@
           <!--</ng-template>-->
         <!--</div>-->
       <!--</ion-item>-->
-      <ion-item no-padding>
+      <ion-item no-padding class="border-bottom">
         <ion-label padding-left>
           {{ 'TRANSACTION_DETAILS_PAGE.AFFILIATE' | translate }}
         </ion-label>
-        <div item-content class="item-content" padding-right>
+        <div item-content class="item-content">
           {{ transaction.customer.affiliate  || '-' }}
         </div>
       </ion-item>
     </ion-list>
-
-    <div class="divider"></div>
 
     <button class="report-customer-btn" ion-item no-border (click)="report()">
       <ion-icon name="ios-alert-outline" color="danger" item-start></ion-icon>
